--- a/application/pom.xml
+++ b/application/pom.xml
@@ -10,6 +10,11 @@
     </parent>
 
     <artifactId>application</artifactId>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
