--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>adapter</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
+            <artifactId>application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <classifier>tests</classifier>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
