--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.pakusoft</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
             <artifactId>application</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
