--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -12,4 +12,27 @@
     <artifactId>bootstrap</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
+            <artifactId>adapter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
+            <artifactId>application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pakusoft</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit5</artifactId>
+            <version>1.4.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
