--- a/adapter/src/main/resources/application-InMem.properties
+++ b/adapter/src/main/resources/application-InMem.properties
@@ -1,4 +1,5 @@
 spring.autoconfigure.exclude=\
 org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,\
-org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
+org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
 
